apps/fullapp/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fullapp-service
  namespace: fullapp
spec:
  selector:
    app: fullapp
  ports:
  - port: 80
    name: http-port
    targetPort: 3000
